# nl2sql

./: OPENROUTER_FIX_SUMMARY.md  diagnose_openrouter.py  fix_openrouter.py  pyproject.toml  test_beta_api.py  test_fix_verification.py  test_nl2sql.py  test_openrouter_direct.py  test_openrouter_final.py  修复方案总结.md
py_nl2sql/: db_instance.py
py_nl2sql/constants/: type.py
py_nl2sql/models/: llm.py
